# llm-app

./: .env.example  .gitignore  README.md  config.py  console.py  database.py  pyproject.toml  rag.py  server.py  slack.py
ai/: helpers.py  llm.py  prompt_templates.py  rag_db.py  tools.py  utils.py
app/: hash.py
app/routers/: conversation.py  token.py
finance/: gold.py  stock.py
